--- a/light.css
+++ b/light.css
@@ -1,181 +1,174 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 :root {
-    --primary-color: #1F2937;
-    --off-white: #F3F4F6;
-    --dark-gray: #6B7280;
+  --primary-color: #1f2937;
+  --off-white: #f3f4f6;
+  --dark-gray: #6b7280;
+  --gray: #ced4de;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0px;
-    
+  font-family: "Montserrat", sans-serif;
+  margin: 0px;
 }
 
 hr {
-    margin: 2rem 0rem;
+  margin: 2rem 0rem;
 }
 
 /** cover bio**/
 
 .column {
-    float: left;
-    width: 50%;
-    padding: 15px;
+  float: left;
+  width: 50%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .column {
+    width: 100%;
   }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-  @media screen and (max-width:800px) {
-    .column {
-      width: 100%;
-    }
-  }
-  
+}
 
 /** spaces **/
 
 .margin-md {
-    margin: 2rem;
+  margin: 2rem;
 }
 
 /** container **/
 .container {
-    padding: 0rem 1rem;
+  padding: 0rem 1rem;
 }
 
 .container-center {
-    max-width: 800px;
-    margin: auto;
+  max-width: 800px;
+  margin: auto;
 }
 
 /** links **/
 .link {
-    box-sizing: border-box;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    
+  box-sizing: border-box;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
 }
 
 .link-primary {
-    background-color: var(--primary-color);
-    border-radius: 0.5rem;
-    color: white
+  background-color: var(--primary-color);
+  border-radius: 0.5rem;
+  color: white;
 }
 
 .link-secondary {
-    color: var(--primary-color);
-    border-radius: 0.5rem;
-    border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  border-radius: 0.5rem;
+  border: 1px solid var(--primary-color);
 }
-
-
 
 /** lists **/
 
 .list-non-bullet {
-    list-style: none;
+  list-style: none;
 }
 
 .list-item-inline {
-    display: inline;
-    padding: 0rem 0.5rem;
+  display: inline;
+  padding: 0rem 0.5rem;
 }
 
 /** navigation **/
 
 .navigation {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 1rem;
-    border-bottom-left-radius: 1rem;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1rem;
+  border-bottom-left-radius: 1rem;
 }
 
 .navigation .nav-brand {
-    font-weight: bold;
-    font-size: larger;
+  font-weight: bold;
+  font-size: larger;
 }
 
 .navigation .nav-pills {
-    text-align: right;
+  text-align: right;
 }
 
 .navigation .link {
-    color: white;
+  color: white;
 }
 
 .navigation .link-active {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 /** header **/
 
 .hero {
-    padding: 2rem;
-    padding-top: 5rem;
-
+  padding: 2rem;
+  padding-top: 5rem;
 }
 
 .hero .hero-img {
-    max-width: 280px;
-    display: block;
-    margin: auto;
+  max-width: 280px;
+  display: block;
+  margin: auto;
 }
 
 .quiz-img {
-    max-width: 280px;
-    display: block;
-    /* margin: auto; */
-    padding-top: 1.5rem;
-    
+  max-width: 280px;
+  display: block;
+  /* margin: auto; */
+  padding-top: 1.5rem;
 }
 
 .hero .tech-img {
-    max-width: 280px;
-    display: block;
-    margin: auto;
+  max-width: 280px;
+  display: block;
+  margin: auto;
 }
 
 .hero .hero-heading {
-    /* text-align: center; */
-    padding-top: 1.5rem;
-    color: var(--dark-gray);
+  /* text-align: center; */
+  padding-top: 1.5rem;
+  color: var(--dark-gray);
 }
 
 .hero .tech-heading {
-    /* text-align: center; */
-    padding-top: 1.5rem;
-    color: var(--dark-gray);
+  /* text-align: center; */
+  padding-top: 1.5rem;
+  color: var(--dark-gray);
 }
 
 .hero .hero-heading .heading-inverted {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .hero .tech-heading .heading-inverted {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 /** sections **/
 
 .section {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .section h1 {
-    text-align: center;
-
+  text-align: center;
 }
 
 /* .section h2 {
@@ -183,50 +176,44 @@ hr {
 
 } */
 
-.code-area{
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    max-width: 800px;
-    padding: 1rem;
-    background-color: var(--off-white);
+.code-area {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  max-width: 800px;
+  padding: 1rem;
+  background-color: var(--off-white);
 }
 
-blockquote{
-border-left: 8px solid var(--primary-color);
-padding-left: 1.3rem;
-
+blockquote {
+  border-left: 8px solid var(--primary-color);
+  padding-left: 1.3rem;
 }
 
 .ow {
-    background-color: var(--off-white);
+  background-color: var(--gray);
 }
 
 /** footers **/
 
 .footer {
-    background-color: var(--primary-color);
-    padding: 2rem 1rem;
-    text-align: center;
-    color: white;
-    border-top-right-radius: 1rem;
+  background-color: var(--primary-color);
+  padding: 2rem 1rem;
+  text-align: center;
+  color: white;
+  border-top-right-radius: 1rem;
 }
 
 .footer .link {
-    color: white
+  color: white;
 }
 
 .footer .footer-header {
-    font-weight: bold;
-    font-size: large;
+  font-weight: bold;
+  font-size: large;
 }
 
 .footer ul {
-    padding-inline-start: 0px;
+  padding-inline-start: 0px;
 }
 
-
-
-
-
 /* * footer  */
-
